[package]
name = "raft-kg"
version = "20260718.0.1"
edition = "2021"
description = "A personal knowledge graph that grows out of your notes and repos"
license = "MIT"
repository = "https://github.com/ducks/raft"
homepage = "https://github.com/ducks/raft"
readme = "README.md"
keywords = ["knowledge-graph", "markdown", "git", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "raft"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
